# Program-liczacy-pole-i-objetosc

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  libtool  main.c  objetosc.c  objetosc.h  pola.c  pola.h
